sfdx-source/main/default/objects/User/fields/Deactivation_Date__c.field-meta.xml
<CustomField>
    <fullName>Deactivation_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Deactivation Date</label>
    <type>DateTime</type>
</CustomField>