sfdx-source/main/default/objects/User/fields/MVIICN__c.field-meta.xml
<CustomField>
    <fullName>MVIICN__c</fullName>
    <description>MVI ICN returned by IAM SSO.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>MVI ICN</label>
    <length>29</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>