sfdx-source/main/default/objects/User/fields/Reactivation_Date__c.field-meta.xml
<CustomField>
    <fullName>Reactivation_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reactivation Date</label>
    <type>DateTime</type>
</CustomField>