sfdx-source/main/default/objects/User/fields/User_Type__c.field-meta.xml
<CustomField>
    <fullName>User_Type__c</fullName>
    <description>Field for the User Deactivation Process. If the field has a value, it will ignore users from being deactivated.</description>
    <inlineHelpText>Field for the User Deactivation Process. If the field has a value, it will ignore users from being deactivated.</inlineHelpText>
    <label>User Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Integration User</fullName>
            </value>
            <value>
                <fullName>Migration User</fullName>
            </value>
            <value>
                <fullName>Service Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>