sfdx-source/main/default/objects/User/fields/VCC_Veteran_Care_Connect_EHR__c.field-meta.xml
<CustomField>
    <fullName>VCC_Veteran_Care_Connect_EHR__c</fullName>
    <description
    >This field is used to toggle visibility of Lightning Web Components in the Veteran Care Connect App. If this value is set to &quot;Cerner&quot; then only components
        relevant to Cerner will be displayed. The converse is true for VistA.</description>
    <inlineHelpText
    >This field is used to toggle visibility of Lightning Web Components in the Veteran Care Connect App. If this value is set to &quot;Cerner&quot; then only components
        relevant to Cerner will be displayed. The converse is true for VistA.</inlineHelpText>
    <label>Veteran Care Connect EHR</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VistA</fullName>
                <default>true</default>
                <label>VistA</label>
            </value>
            <value>
                <fullName>Cerner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>