sfdx-source/main/default/objects/User/fields/VistA_Ids__c.field-meta.xml
<CustomField>
    <fullName>VistA_Ids__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>The VistA Station and DUZ mapping from IAM SSOi.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The VistA Station and DUZ mapping from IAM SSOi.</inlineHelpText>
    <label>VistA Ids</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>